# lily-and-the-moon

./: .gitignore  CMakeLists.txt  LICENSE  gen_project.py  readme.md  todo.md
src/: app.c  app.h  component.h  entity_manager.c  entity_manager.h  helpers.h  main.c
src/game/: component.c  component.h  component_types.h  entity_manager.c  entity_manager.h  entity_types.h  game_manager.c  game_manager.h  types.h
src/game/api/: game_interface.c  game_interface.h  game_types.h
src/platform/: app.c  app.h  keymap.c  keymap.h  logging.c  logging.h  main.c  texture_manager.c  texture_manager.h
